--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,11 @@
 {
-  "compilerOptions": {
-    "declaration": true,
-    "module": "es6",
-    "target": "ES6"
-  },
   "files": [
     "diff.ts",
     "equal.ts",
     "errors.ts",
     "index.ts",
     "patch.ts",
-    "pointer.ts"
+    "pointer.ts",
+    "scim.pointer.ts"
   ]
 }
