--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,15 @@ errors.js
 index.js
 patch.js
 pointer.js
+scim.pointer.js
 diff.d.ts
 equal.d.ts
 errors.d.ts
 index.d.ts
 patch.d.ts
 pointer.d.ts
+scim.pointer.d.ts
 coverage/
+node_modules
+scim-rfc6902.js
+scim-rfc6902.min.js
