--- a/package.json
+++ b/package.json
@@ -1,34 +1,47 @@
 {
-  "name": "rfc6902",
-  "version": "1.3.0",
-  "description": "Complete implementation of RFC6902 (patch and diff)",
+  "name": "scim-rfc6902",
+  "version": "1.0.0",
+  "description": "SCIM specific support to the diff generation in chbrown/rfc6902",
   "keywords": [
     "json",
     "patch",
     "diff",
-    "rfc6902"
+    "rfc6902",
+    "scim"
   ],
-  "homepage": "https://github.com/chbrown/rfc6902",
+  "homepage": "https://github.com/kayyagari/rfc6902",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chbrown/rfc6902.git"
+    "url": "https://github.com/kayyagari/rfc6902.git"
   },
-  "author": "Christopher Brown <io@henrian.com> (http://henrian.com)",
+  "author": "Kiran Ayyagari <kayyagari@keydap.com> (http://keydap.com)",
   "license": "MIT",
-  "main": "./rfc6902.js",
+  "main": "./scim-rfc6902.js",
   "devDependencies": {
-    "babel-core": "^5.0.0",
-    "babelify": "^5.0.0",
-    "browserify": "12.0.1",
-    "coveralls": "*",
-    "derequire": "2.0.3",
-    "istanbul": "*",
-    "js-yaml": "*",
-    "mocha": "*",
-    "mocha-lcov-reporter": "*",
-    "typescript": "*"
+    "@types/js-yaml": "^3.9.1",
+    "@types/mocha": "^2.2.43",
+    "@types/node": "^8.0.33",
+    "coveralls": "^2.13.3",
+    "istanbul": "0.4.5",
+    "js-yaml": "3.10.0",
+    "mocha": "^3.5.3",
+    "mocha-lcov-reporter": "1.3.0",
+    "rollup": "^0.50.0",
+    "typescript": "^2.5.3"
   },
   "scripts": {
-    "test": "make test"
+    "prepublish": "tsc -t ES5 -m commonjs -d",
+    "pretest": "tsc -p tests -t ES5 -m commonjs",
+    "test": "istanbul cover _mocha -- tests/ -R spec",
+    "posttest": "coveralls < coverage/lcov.info || true",
+    "dist": "tsc -t ES2015 -m es2015 && rollup index.js --output.format umd --name rfc6902 --output.file dist/rfc6902.js && closure-compiler dist/rfc6902.js > dist/rfc6902.min.js",
+    "clean": "tsc -m commonjs -d --listEmittedFiles | sed 's/^TSFILE: //' | xargs rm -v"
+  },
+  "dependencies": {
+    "babel-core": "^6.26.3",
+    "babelify": "^8.0.0",
+    "browserify": "^16.2.2",
+    "derequire": "^2.0.6",
+    "google-closure-compiler-js": "^20180506.0.0"
   }
 }
